# Megatron

./: .gitignore  CMakeLists.txt  Disco.cpp  Disco.h  README.md  StorageManager.cpp  StorageManager.h  Titanic control 2024.xlsx  Titanic.csv  Titanic.csv.txt  esquema.txt  main.cpp  mainDisk.cpp
StorageManager/: CMakeLists.txt  StorageManager.cpp  StorageManager.h  megatron.cpp  megatron.h
StorageManager/AccessMethods/: CMakeLists.txt
StorageManager/AccessMethods/Header/: BPTree.h  Node.h
StorageManager/AccessMethods/Sources/: BPTree.cpp  Node.cpp
StorageManager/BufferManager/: CMakeLists.txt
StorageManager/BufferManager/Header/: BufferManager.h  BufferPool.h  Frame.h  LRU.h  MetaData.h  PageTable.h  ReplacementPolicy.h  Replacer.h
StorageManager/BufferManager/Sources/: BufferManager.cpp  BufferPool.cpp  Frame.cpp  LRU.cpp  MetaData.cpp  PageTable.cpp  ReplacementPolicy.cpp  Replacer.cpp
StorageManager/DiskManager/: CMakeLists.txt
StorageManager/DiskManager/Header/: Disco.h  archivo.h  config.h  disk.h  diskManager.h
StorageManager/DiskManager/Sources/: disk.cpp  diskManager.cpp
prueba_bptree/: B+ Tree.h  BPTree.cpp  bptree.dot  display.cpp  prueba_bplus.cpp  remove.cpp  search.cpp  utilFunc.cpp
